--- a/DashboardPro/DashboardPro/Pages/index.cshtml
+++ b/DashboardPro/DashboardPro/Pages/index.cshtml
@@ -1,58 +1,32 @@
 ﻿@page
-@{
-    ViewData["Title"] = "Home page";
-}
+@model DashboardPro.Pages.IndexModel
 
 <!DOCTYPE html>
-
-<!--STYLESHEETS-->
-<link rel="stylesheet" href="../CSS/main.css"><!--Main flow for all pages-->
-<link rel="stylesheet" href="../CSS/nav.css"><!--How the pop-out navbar looks-->
-
 <html>
 <head>
-    <title>Admin Dashbaord</title>
+    <!--Style Sheets-->
+    <link rel="stylesheet" href="~/css/global.css">
+    <link rel="stylesheet" href="~/css/nav.css">
+    <!--Scripts-->
+    <script src="https://code.jquery.com/jquery-3.4.0.js"></script>
+    <script src="~/JS/data.js"></script>
+    <script src="~/JS/index.js"></script>
+    <script src="~/JS/nav.js"></script>
 </head>
-
-<body>
-
+<body >
     <header>
-        <img id="logo" src="../Assets/Photos/logo.png"><!--Company logo-->
+        <img src="~/assets/logo.png" />
     </header>
-
     <nav>
-        <!--Navigation button on main screen-->
-        <div id="navbar">
-            <img id="menubutton" src="../Assets/Photos/menuicon.png" onclick="openNav()"><!--Picture for menu icon-->
-        </div>
-        <!--Menu from navigation menu-->
-        <div id="sidenav">
-            <a id="closebutton" href="javascript:void(0)" onclick="closeNav()">&times;</a>
-            <div id="navlist"></div><!--Holds authenticated nav list items-->
-        </div>
+        <span><img id="menubutton" src="~/assets/menuicon.png" /></span>
+        <div id="sidebar"></div>
     </nav>
-
-    <main id="main">
-
-        <button id="testbutton" onclick="getData()"> Test </button>
-
-        <div id="app">
-
-        </div>
+    <main>
+        <input type="button" value="Demo 1" id="buttonDemo1" onclick="ConnectionTest()" />
+        <br />
+        <span id="result4"></span>
     </main>
-
-
-
-    <footer>
-    </footer>
-
+    <footer></footer>
 </body>
 </html>
-
-<!--SCRIPTS-->
-<script src="../JS/nav.js"></script><!--Handles the fuctionality of the pop-out nav bar-->
-<script src="../JS/auth.js"></script><!--Handles user autherorization-->
-<script src="../JS/data.js"></script><!--Manages data calls-->
-<!--Libraries-->
-<script src="../lib/jquery/jquery.js"></script>
 
